# watsonx-agent-langgraph-deployment-example

./: .gitignore  README.md
agents/langgraph-arxiv-research/: README.md  ai_service.py  config.toml_template  pyproject.toml  utils.py
agents/langgraph-arxiv-research/examples/: _interactive_chat.py  query_existing_deployment.py
agents/langgraph-arxiv-research/scripts/: build_package.py  deploy.py
agents/langgraph-arxiv-research/src/langgraph_react_agent/: __init__.py  tools.py
agents/langgraph-arxiv-research/tests/: test_tool_arxiv.py  test_tool_weather.py
ui/code/: .env_template  app_rest.py  app_sdk.py  config.toml_template  start_sdk.sh
ui/code/modules/: load_config.py  watsonx.py  watsonx_deployment.py
